--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hedy_chu/deploy-v3",
+  "name": "@katsu-finance/deploy-v3",
   "version": "1.47.9",
   "files": [
     "dist",
@@ -20,8 +20,8 @@
   "main": "dist/helpers/index.js",
   "devDependencies": {
     "@aave/aave-token": "^1.0.4",
-    "@hedy_chu/core-v3": "^1.18.0",
-    "@hedy_chu/periphery-v3": "^2.4.2",
+    "@katsu-finance/core-v3": "^1.0.0",
+    "@katsu-finance/periphery-v3": "^1.0.0",
     "@aave/safety-module": "^1.0.3",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
@@ -66,8 +66,8 @@
     "deploy:market:eth:empty:fork": "FORK=main MARKET_NAME=Ethereum npm run deploy"
   },
   "peerDependencies": {
-    "@hedy_chu/core-v3": "x || >=1.0.0-beta || >=3.0.0-beta",
-    "@hedy_chu/periphery-v3": "x || >=1.0.0-beta || >=3.0.0-beta",
+    "@katsu-finance/core-v3": "x || >=1.0.0-beta || >=3.0.0-beta",
+    "@katsu-finance/periphery-v3": "x || >=1.0.0-beta || >=3.0.0-beta",
     "hardhat": "^2.6.1"
   },
   "publishConfig": {
